--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,18 +1,56 @@
 version: '2'
 services:
-  i-omxg:
+  i-omxg-producer:
     build:
       dockerfile: Dockerfile
-      context: .
-    container_name: iOMXG
+      context: ./producer/
+    container_name: iOMXG-producer
     depends_on:
       - broker
       - zookeeper
     ports:
       - 8080:8080
     volumes:
-      - ./:/go/src/iOMXG
-      - /go/src/iOMXG/vendor
+      - ./producer:/go/src/iOMXG-producer
+      - /go/src/iOMXG-producer/vendor
+    environment:
+      - APP_PORT=8080
+      - KAFKA_BOOTSTRAP_SERVER=broker:29092
+      - KAFKA_TOPIC_NAME=dev-mvp-iomxg-create-subscriber
+      - KAFKA_NUMBER_OF_PARTITION=2
+
+  i-omxg-consumer:
+    build:
+      dockerfile: Dockerfile
+      context: ./consumer/
+    container_name: iOMXG-consumer
+    depends_on:
+      - broker
+      - zookeeper
+    ports:
+      - 8081:8080
+    volumes:
+      - ./consumer:/go/src/iOMXG-consumer
+      - /go/src/iOMXG-consumer/vendor
+    environment:
+      - APP_PORT=8080
+      - KAFKA_BOOTSTRAP_SERVER=broker:29092
+      - KAFKA_TOPIC_NAME=dev-mvp-iomxg-create-subscriber
+      - KAFKA_CONSUME_GROUP_ID=dev-mvp-iomxg-create-subscriber-0
+
+  i-omxg-consumer2:
+    build:
+      dockerfile: Dockerfile
+      context: ./consumer/
+    container_name: iOMXG-consumer2
+    depends_on:
+      - broker
+      - zookeeper
+    ports:
+      - 8082:8080
+    volumes:
+      - ./consumer:/go/src/iOMXG-consumer
+      - /go/src/iOMXG-consumer/vendor
     environment:
       - APP_PORT=8080
       - KAFKA_BOOTSTRAP_SERVER=broker:29092
@@ -29,9 +67,9 @@ services:
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
-    volumes:
-      - ./kafka_data/zookeeper/data:/data
-      - ./kafka_data/zookeeper/datalog:/datalog
+    # volumes:
+      # - ./kafka_data/zookeeper/data:/data
+      # - ./kafka_data/zookeeper/datalog:/datalog
 
   broker:
     image: confluentinc/cp-kafka:5.4.0
